# gnome-terminal

./: meson.build  meson_options.txt
data/icons/: meson.build
help/: meson.build
src/: meson.build
