# Copyright © 2018, 2019 Iñigo Martínez
# Copyright © 2019 Christian Persch
#
# This programme is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or (at your
# option) any later version.
#
# This programme is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this programme.  If not, see <https://www.gnu.org/licenses/>.

help_id = gt_name

help_sources = [
  'adv-keyboard-shortcuts.page',
  'app-colors.page',
  'app-cursor.page',
  'app-fonts.page',
  'app-fullscreen.page',
  'app-terminal-sizes.page',
  'app-zoom.page',
  'gs-execute-commands.page',
  'gs-tabs.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'overview.page',
  'pref-bell.page',
  'pref-custom-command.page',
  'pref-custom-exit.page',
  'pref-encoding.page',
  'pref-keyboard-access.page',
  'pref-login-shell.page',
  'pref-menubar.page',
  'pref-profile-char-width.page',
  'pref-profile-encoding.page',
  'pref-profiles.page',
  'pref-scrolling.page',
  'pref-tab-window.page',
  'pref-user-input.page',
  'pref.page',
  'prob-reset.page',
  'txt-copy-paste.page',
  'txt-links.page',
  'txt-save-text.page',
  'txt-search.page',
  'txt-select-text.page',
]

help_media = [
  'figures/gnome-terminal.png',
  'figures/gnome-terminal-icon.png',
]

gnome.yelp(
  help_id,
  sources: help_sources,
  media: help_media,
)
